updated Adding OCP provider steps

--- a/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_an_OpenShift_Provider.adoc
@@ -1,7 +1,7 @@
 [[adding_openshift_provider]]
-= Adding an OpenShift Enterprise Provider
+= Adding an OpenShift Container Platform Provider
 
-After initial installation and creation of a {product-title} environment, add an OpenShift Enterprise provider using the token obtained in xref:Obtaining_OpenShift_Enterprise_Management_Token[] and following the procedure below.
+After initial installation and creation of a {product-title} environment, add an OpenShift Container Platform provider using the token obtained in xref:Obtaining_OpenShift_Container_Platform_Management_Token[] and following the procedure below.
 
-include::../common/provider-ose-add-container.adoc[]
+include::../common/provider-ocp-add-container.adoc[]
 
