--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -2,7 +2,7 @@
 
 A containers provider is a service that manages container resources, and can be added to the {product-title} appliance.
 
-{product-title} can connect to OpenShift Enterprise containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
+{product-title} can connect to OpenShift Container Platform containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
 
 * How many containers exist in my environment?
 * Does a specific node have enough resources?
@@ -20,17 +20,17 @@ You can manage policies for containers entities by adding tags. All containers e
 
 
 :leveloffset: 2
-[[Obtaining_OpenShift_Enterprise_Management_Token]]
-= Obtaining an OpenShift Enterprise Management Token
+[[Obtaining_OpenShift_Container_Platform_Management_Token]]
+= Obtaining an OpenShift Container Platform Management Token
 
-When deploying OpenShift Enterprise using `openshift-ansible-3.0.20` (or later versions), the OpenShift Enterprise link:https://docs.openshift.com/container-platform/latest/admin_guide/service_accounts.html[service account] and link:https://docs.openshift.com/container-platform/latest/admin_guide/manage_authorization_policy.html[roles] required by {product-title} are installed by default.
+When deploying OpenShift Enterprise using `openshift-ansible-3.0.20` (or later versions), the OpenShift Container Platform link:https://docs.openshift.com/container-platform/latest/admin_guide/service_accounts.html[service account] and link:https://docs.openshift.com/container-platform/latest/admin_guide/manage_authorization_policy.html[roles] required by {product-title} are installed by default.
 
 [NOTE]
 ====
-See the link:https://docs.openshift.com/container-platform/latest/architecture/additional_concepts/authorization.html#roles[OpenShift Enterprise documentation] for a list of the default roles.
+See the link:https://docs.openshift.com/container-platform/latest/architecture/additional_concepts/authorization.html#roles[OpenShift Container Platform documentation] for a list of the default roles.
 ====
 
-To obtain the token to use for the provider definition, follow the instructions below for your OpenShift Enterprise version.
+To obtain the token to use for the provider definition, follow the instructions below for your OpenShift Container Platform version.
 
 [[obtaining-a-management-token-in-openshift-enterprise-3.2]]
 == Obtaining a Management Token in OpenShift Enterprise 3.2 and Later
