--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -131,20 +131,39 @@ The following procedure provides manual upload instructions if the image uploade
 . Log into a *host* in your Red Hat Virtualization system with a mount to the *Export storage domain*.
 . Change to the *Export storage domain's* directory.
 . Copy the {product-title} appliance `OVF` archive to this directory.
-. Run the `ls` command to locate the directory named after a GUID, and change to that directory.
+. Run the `ls` command to locate the directory named after a GUID, and change to that directory. For example:
++
+----
+[root@localhost rhvexports]# ls
+4a8fc2b1-0a57-47fd-b622-7e170981305b    __DIRECT_IO_TEST__
+cfme-rhevm-5.7.0.17-1.x86_64.rhevm.ova
+
+[root@localhost rhvexports]# cd 4a8fc2b1-0a57-47fd-b622-7e170981305b/
+----
++
 . Extract the `OVF` file using the `tar` command, substituting the `.ova` filename with your download:
 +
 ----
-$ tar xvf ../cfme-rhevm-5.7.0.17-1.x86_64.rhevm.ova
+[root@localhost 4a8fc2b1-0a57-47fd-b622-7e170981305b]# tar xvf ../cfme-rhevm-5.7.0.17-1.x86_64.rhevm.ova
+images/
+images/896d49ac-a5e4-4b73-8448-9778bb76ce32/
+images/896d49ac-a5e4-4b73-8448-9778bb76ce32/26e85696-78a4-4a82-aedd-bf60a4aa7dae.meta
+images/896d49ac-a5e4-4b73-8448-9778bb76ce32/26e85696-78a4-4a82-aedd-bf60a4aa7dae
+master/
+master/vms/
+master/vms/647d5765-17fe-436d-aff1-82243e79976a/
+master/vms/647d5765-17fe-436d-aff1-82243e79976a/647d5765-17fe-436d-aff1-82243e79976a.ovf
 ----
 +
-. Set the following permissions:
+. Set the following permissions on the `images` and `master` directories so the appliance can be imported as a template:
 +
 ----
-chown -R 36:36 images/
-chown -R 36:36 master/
+[root@localhost 4a8fc2b1-0a57-47fd-b622-7e170981305b]# chown -R 36:36 master/
+[root@localhost 4a8fc2b1-0a57-47fd-b622-7e170981305b]# chown -R 36:36 images/
 ----
 +
+
+The Red Hat Virtualization export domain now shows the new appliance in the administration portal.
 
 
 [[running]]
