--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -163,7 +163,7 @@ master/vms/647d5765-17fe-436d-aff1-82243e79976a/647d5765-17fe-436d-aff1-82243e79
 ----
 +
 
-The Red Hat Virtualization export domain now shows the new appliance in the administration portal.
+The Red Hat Virtualization export domain shows the {product-title} appliance in the administration portal.
 
 
 [[running]]
