updates to adding openshift provider section, including a new section on getting a token in OCP3.3

--- a/common/provider-ose-mgt-token-3_1.adoc
+++ b/common/provider-ose-mgt-token-3_1.adoc
@@ -1,4 +1,4 @@
-Run the following to obtain the token needed to add an OpenShift Enterprise
+Run the following to obtain the token needed to add an OpenShift Enterprise 3.1
 provider:
 
 . To obtain the `management` service account token name, run the following command::
