--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -32,8 +32,15 @@ See the link:https://docs.openshift.com/container-platform/latest/architecture/a
 
 To obtain the token to use for the provider definition, follow the instructions below for your OpenShift Container Platform version.
 
+
+[[obtaining-a-management-token-in-openshift-container-platform]]
+== Obtaining a Management Token in OpenShift Container Platform 3.3 and Later
+
+include::../common/provider-ocp-mgt-token.adoc[]
+
+
 [[obtaining-a-management-token-in-openshift-enterprise-3.2]]
-== Obtaining a Management Token in OpenShift Enterprise 3.2 and Later
+== Obtaining a Management Token in OpenShift Enterprise 3.2
 
 include::../common/provider-ose-mgt-token-3_2.adoc[]
 
