--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -16,9 +16,13 @@ The *Hostname* must use a unique fully qualified domain name.
 . Enter the OpenShift management token in the *Token* field. This is the token obtained earlier in xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
 . Enter the same token in the *Confirm Token* field.
 . Click *Validate* to confirm that the {product-title} can connect to the OpenShift Container Platform provider using the provided token.
-. In the *Hawkular* tab, configure metrics collection by providing [. You can also configure this later by editing the provider. ]
+. In the *Hawkular* tab, configure capacity and utilization metrics collection by providing [. You can also configure this later by editing the provider. ]
 .. Select the *Security Protocol*.
 .. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
 .. Enter the *API Port* of the [provider].
 . Click *Add*.
-. The "Added!" pop-up displays when the provider has been added.
+
+The "Added!" pop-up displays when the provider has been added.
+
+//Need a note about enabling C&U roles like in RHV?
+
