--- a/common/provider-ose-mgt-token-3_2.adoc
+++ b/common/provider-ose-mgt-token-3_2.adoc
@@ -1,4 +1,4 @@
-Run the following to obtain the token needed to add an OpenShift Enterprise
+Run the following to obtain the token needed to add an OpenShift Enterprise 3.2 or later
 provider:
 
   # oc sa get-token -n management-infra management-admin
