--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -74,7 +74,10 @@ include::Discovering_Multiple_Management_Systems.adoc[]
 :leveloffset: 2
 = Red Hat Virtualization Manager Providers
 
-To use a Red Hat Virtualization Manager provider, add it to the appliance and authenticate its hosts.
+To use a Red Hat Virtualization Manager provider, add it to the appliance and authenticate its hosts. You can also configure capacity and utilization data collection to help track usage and find common issues.
+
+:leveloffset: 3
+include::Enabling_Red_Hat_Virtualization_CU.adoc[]
 
 :leveloffset: 3
 include::Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc[]
