Update-app-console-cli to correct syntax
Hey Suyog, just made a quick correction here to the fetch-key and force-key entries, since they were separated by an underscore instead of a dash.

--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -128,7 +128,7 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 
 |
 
-							--fetch_key (-K)
+							--fetch-key (-K)
 
 
 |
@@ -138,7 +138,7 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 
 |
 
-							--force_key (-f)
+							--force-key (-f)
 
 
 |
