Edited C&U Database tab step
Added line about Endpoints tab location to be consistent with step 6

--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -22,7 +22,7 @@ The *Hostname* must be a unique fully qualified domain name.
 ** Enter the password in the *Password* field.
 ** Confirm the password in the *Confirm Password* field.
 ** Click *Validate* to confirm {product-title_short} can connect to the Red Hat Virtualization Manager.
-. In the *C & U Database* tab, you can configure capacity and utilization metrics collection by providing login credentials for the {product-title_short} user of the Red Hat Virtualization Data Warehouse database. You can also configure this later by editing the provider.
+. Under *Endpoints* in the *C & U Database* tab, you can configure capacity and utilization metrics collection by providing login credentials for the {product-title_short} user of the Red Hat Virtualization Data Warehouse database. You can also configure this later by editing the provider. Configure the following in the *C & U Database* tab:
 +
 [IMPORTANT]
 ====
