--- a/common/provider-ocp-mgt-token.adoc
+++ b/common/provider-ocp-mgt-token.adoc
@@ -1,4 +1,4 @@
-Run the following to obtain the token needed to add an OpenShift Container Platform 3.3 or later
+Run the following to obtain the token needed to add an OpenShift Container Platform 3.3 (or later)
 provider:
 
   # oc sa get-token -n management-infra management-admin
