added SSL options for adding RHV and Containers providers

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -3,7 +3,10 @@
 . Enter a *Name* for the provider.
 . From the *Type* list, select *OpenShift Container Platform*.
 . Enter the appropriate *Zone* for the provider. If you do not specify a zone, it is set to `default`.
-. Select the *Security Protocol*.
+. Select a *Security Protocol* method to specify how to authenticate to the provider:
+* *SSL*: Authenticate to the provider securely using a trusted certificate authority. Select this option if you have a valid SSL certificate for the provider and it is signed by a trusted certificate authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate to the provider with a self-signed certificate. For this option, copy your certificate's text to the *Trusted CA Certificates* box in PEM format.
+* *SSL without validation*: Authenticate to the provider insecurely (not recommended).
 . Enter the *Hostname* or IPv4 or IPv6 address of the provider.
 +
 [IMPORTANT]
@@ -17,9 +20,12 @@ The *Hostname* must use a unique fully qualified domain name.
 . Enter the same token in the *Confirm Token* field.
 . Click *Validate* to confirm that the {product-title} can connect to the OpenShift Container Platform provider using the provided token.
 . In the *Hawkular* tab, configure capacity and utilization metrics collection by providing [. You can also configure this later by editing the provider. ]
-.. Select the *Security Protocol*.
+. Select a *Security Protocol* method to specify how to authenticate to the provider:
+* *SSL*: Authenticate to the provider securely using a trusted certificate authority. Select this option if you have a valid SSL certificate for the provider and it is signed by a trusted certificate authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate to the provider with a self-signed certificate. For this option, copy your certificate's text to the *Trusted CA Certificates* box in PEM format.
+* *SSL without validation*: Authenticate to the provider insecurely (not recommended).
 .. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
-.. Enter the *API Port* of the [provider].
+.. Enter the *API Port* of the [provider]. The default port is `443`.
 . Click *Add*.
 
 The "Added!" pop-up displays when the provider has been added.
