--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -15,8 +15,8 @@ After initial installation and creation of a {product-title} environment, add a 
 The *Hostname* must be a unique fully qualified domain name.
 ====
 * Enter the *API Port* if your provider uses a non-standard port for access.
-* Select *Yes* or *No* to *Verify TLS Certificates*.
-* To use authenticate the provider using a CA certificate, paste the certificate's text in *Trusted CA Certificates* in PEM format.
+* Select *Yes* or *No* to *Verify TLS Certificates* to specify whether to authenticate securely to the provider using TLS.
+** If you select *Yes* for *Verify TLS Certificates*, paste the certificate's text in the *Trusted CA Certificates* box in PEM format.
 * Provide the login credentials required for the Red Hat Virtualization Manager administrative user:
 ** Enter the user name (formatted as `admin@internal`) in the *Username* field.
 ** Enter the password in the *Password* field.
