--- a/common/openstack/adding-an-openstack-infrastructure-provider.adoc
+++ b/common/openstack/adding-an-openstack-infrastructure-provider.adoc
@@ -28,6 +28,10 @@ include::osp-keystone-api-v3.adoc[]
 NOTE: For more information, see the definition of host aggregates and availability zones in  https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-compute[OpenStack Compute (nova)] in the Red Hat OpenStack Platform _Architecture Guide_.
 
 . In the *Default* tab, under *Endpoints*, configure the host and authentication details of your OpenStack provider:
+.. Select a *Security Protocol* method to specify how to authenticate to the provider:
+* *SSL without validation*: Authenticate to the provider insecurely (not recommended).
+* *SSL*: Authenticate to the provider securely using a trusted certificate authority. Select this option if you have a valid SSL certificate for the provider and it is signed by a trusted certificate authority. No further configuration is required for this option.
+* *Non-SSL*: 
 .. Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider. If your provider is an undercloud, use its hostname (see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/single/director-installation-and-usage/#sect-Setting_the_Hostname_for_the_System[Setting the Hostname for the System] in Red Hat OpenStack Platform _Director Installation and Usage_ for more details)
 .. In *API Port*, set the public port used by the OpenStack Keystone service. By default, OpenStack uses port 5000 for this.
 .. Select the appropriate *Security Protocol* used for authenticating with your OpenStack provider.
