WIP: Deployment Planning Guide restructure - moved some sections to the Managing Infrastructure and Inventory in a new section

--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -34,6 +34,10 @@ include::topics/Datastores.adoc[]
 
 
 :leveloffset: 1
+include::topics/Capacity_Utilization_Functions.adoc[]
+
+
+:leveloffset: 1
 include::topics/PXE_Servers.adoc[]
 
 
@@ -79,6 +83,5 @@ include::topics/VDS_Switches.adoc[]
 
 :leveloffset: 1
 include::topics/Container_Entities.adoc[]
-
 
 
