--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -40,7 +40,7 @@ include::common/cap-util-assign-server-roles.adoc[]
 
 [NOTE]
 ====
-In addition to setting the server role, you must also select which clusters and datastores to collect data for. For more information, see General Configuration. You must have super administrator rights to edit these settings.
+In addition to setting the server role, you must also select which clusters and datastores to collect data for. For more information, see the _General Configuration_ guide. You must have super administrator rights to edit these settings.
 ====
 
 [[data_collection_for_rhev_33_34]]
@@ -268,7 +268,7 @@ done
 ------
 +
 . Add the configured OpenStack provider to {product-title}. See
-ifdef::cfme[link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/managing-providers/#adding_openstack_providers[Adding OpenStack Providers] in _Managing Providers_.]
+ifdef::cfme[link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_providers/cloud_providers#adding_openstack_cloud_providers[Adding OpenStack Providers] in _Managing Providers_.]
 ifdef::miq[Managing Providers]
   After adding the provider, capacity and utilization data for your instances
   populate in a few minutes.
@@ -308,9 +308,9 @@ capacity and utilization charts under the menu:Compute[Infrastructure] tab.
 ifdef::cfme[]
 For procedures to view capacity and utilization charts for hosts, clusters, and virtual machines, see the following sections in _Managing Infrastructure and Inventory_:
 
-* link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/managing-infrastructure-and-inventory/#viewing_capacity_and_utilization_charts_for_a_host[Viewing Capacity and Utilization Charts for a Host]
-* link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/managing-infrastructure-and-inventory/#viewing_capacity_and_utilization_charts_for_a_cluster[Viewing Capacity and Utilization Charts for a Cluster]
-* link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/managing-infrastructure-and-inventory/#to_view_capacity_and_utilization_charts_for_a_virtual_machine[Viewing Capacity and Utilization Charts for a
+* link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_hosts#viewing_capacity_and_utilization_charts_for_a_host[Viewing Capacity and Utilization Charts for a Host]
+* link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_clusters#viewing_capacity_and_utilization_charts_for_a_cluster[Viewing Capacity and Utilization Charts for a Cluster]
+* link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_virtual_machines#to_view_capacity_and_utilization_charts_for_a_virtual_machine[Viewing Capacity and Utilization Charts for a
 Virtual Machine]
 endif::cfme[]
 
@@ -332,66 +332,9 @@ Charts created include:
 |====
 
 ifdef::cfme[]
-See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/managing-infrastructure-and-inventory/[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_ for more information.
+See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/managing_infrastructure_and_inventory/sect_datastores#viewing_capacity_and_utilization_charts_for_a_datastore[Viewing Capacity and Utilization Charts for a Datastore] in _Managing Infrastructure and Inventory_ for more information.
 endif::cfme[]
 
-[[chart-features]]
-=== Chart Features
-
-Each chart provides its own set of special features including zooming in
-on a chart and shortcut menus.
-
-[[zooming-into-a-chart]]
-==== Zooming into a Chart
-
-. Navigate to the chart you want to zoom. If you hover anywhere on the
-  chart, two dashed lines will appear to target a coordinate of the
-  chart.
-. Click image:2251.png[](*Click to zoom in*) in the lower left corner of the
-  chart to zoom into it.
-. To go back to the regular view click image:2252.png[](*Click to zoom out*) on
-  the enlarged chart.
-
-[[drilling-into-chart-data]]
-==== Drilling into Chart Data
-
-. Navigate to the chart you want to get more detail from.
-. Hover over a data point to see the coordinates.
-. Click on a data point to open a shortcut menu for the chart. In this
-  example, we can use the shortcut menu to go to the hourly chart or
-  display the virtual machines that were running at the time the data
-  was captured.
-+
-* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
-  selecting from the *Chart* option will change all of the charts on
-  the page to the new interval selected.
-* If you are viewing the *CPU*, *Disk*, *Memory*, or *Network* charts,
-  selecting from the *Display* option will allow you to drill into
-  the virtual machines or *Hosts* that were running at the time.
-* If you are viewing the *VM* or *Hosts* chart, the *Display* menu will
-  allow you to view running or stopped virtual machines. The time
-  of the data point will be displayed in addition to the virtual
-  machines that apply. From here, click on a virtual machine to view
-  its details.
-
-[[optimization]]
-=== Optimization
-
-{product-title}'s optimization functions allow you to view
-utilization trends, and identify and project bottlenecks in your
-environment. In addition, you can predict where you have capacity for
-additional virtual machines.
-
-[NOTE]
-====
-For reporting of daily optimization data, incomplete days (days with less
-than 24 hourly data points from midnight to midnight) that are at the
-beginning or end of the requested interval are excluded. Days with less
-than 24 hourly data points would be inaccurate and including them would
-skew trend lines. Therefore, the *Optimize* page requires at least two full
-days of daily data because all the charted values are derived from trend
-calculations and that requires at least two data points
-====
 
 [[utilization-trends]]
 === Utilization Trends
@@ -400,55 +343,6 @@ calculations and that requires at least two data points
 of your clusters, providers, and datastores. You can choose from summary,
 details, or report view.
 
-[[viewing-utilization-trend-summary]]
-==== Viewing Utilization Trend Summary
-
-This procedure shows you how to view utilization trend summary.
-
-. Navigate to menu:Optimize[Utilization].
-. Click *Summary* if it is not already selected.
-. Expand the tree on the left side, until you can see the desired
-  providers, clusters, or datastores.
-. Click on the item.
-. Use the *Options* section in the *Summary* tab to change the
-  characteristics of the data.
-+
-* Use *Trends* to select how far back you want to calculate
-  the trend.
-* Use *Selected Day* for the date you want to see percent utilization
-  for in the chart on the *Summary* tab.
-* Use *Classification* to only see trends for a specific applied tag.
-* Use *Time Profile* to select an existing time profile. If the
-  logged on user does not have any time profiles available, this
-  option will not show.
-* Select a *Time Zone*.
-
-[[viewing-detail-lines-of-a-utilization-trend]]
-==== Viewing Detail Lines of a Utilization Trend
-
-This procedure shows you how to view detail lines of a utilization trend.
-
-. Navigate to menu:Optimize[Utilization].
-. Expand the tree on the left side, until you can see the desired
-  providers, clusters, or datastores.
-. Click on the item.
-. Click *Details* if it is not already selected.
-. From the *Options* area, select how far back you want to view the
-  trends for and any classifications you want to use.
-
-[[viewing-a-report-of-a-utilization-trend]]
-==== Viewing a Report of a Utilization Trend
-
-To find out more about resource utilization, view utilization trend
-reports.
-
-. Navigate to menu:Optimize[Utilization].
-. Expand the tree on the left side, until you can see the desired
-  providers, clusters, or datastores.
-. Click on the item.
-. Click *Report* if it is not already selected.
-. From the *Options* area, select how far back you want to view the
-  trends for and any classifications you want to use.
 
 [[planning-where-to-put-a-new-virtual-machine]]
 === Planning Where to Put a New Virtual Machine
@@ -500,92 +394,5 @@ place the virtual machines. The *Report* tab shows the best fit and
 statistics on the reference virtual machine in a tabular format. From the
 *Report* tab, you can also create a PDF of the report or download the data
 in `txt` or `csv` format.
-
-
-[[bottlenecks]]
-=== Bottlenecks
-
-{product-title} can show where bottlenecks occur in your
-virtual infrastructure. You can view them either on a timeline or as a
-report which can be downloaded for further analysis. 
-
-[[prerequisites]]
-==== Prerequisites
-
-* Bottleneck reports use the same mechanism to gather data as Capacity and Utilization reports. To enable data collection in {product-title}, see the following sections:
-** xref:assigning_the_capacity_and_utilization_server_roles[]
-** xref:data_collected[]
-* Additionally, configure your {product-title} for collecting capacity and utilization reports for clusters and datastores by following this procedure:
-.. From the settings menu, select *Configuration*.
-.. Select *Region* from the *Settings* tab in the left pane of the appliance. 
-.. In the right pane, under the *C & U Collection* tab, check the boxes for *Collect for All Clusters* under *Clusters* and *Collect for All Datastores* under *Datastores*, or check the boxes for the clusters/datastores you desire.
-+
-[NOTE]
-====
-*Collect for All Clusters* must be checked to be able to collect capacity and utilization data from cloud providers such as Red Hat OpenStack or Amazon EC2.
-====
-+
-.. Click *Save*.
-* For bottleneck reports to work as expected, the data collection for Capacity and Utilization reports should also be enabled for the relevant backend provider. See the following documentation to enable data collection for Red Hat Enterprise Virtualization and Red Hat Enterprise Linux OpenStack Platform provider:
-** For Red Hat Enterprise Virtualization: xref:data_collection_for_rhev_33_34[]
-** For Red Hat Enterprise Linux OpenStack Platform: xref:data_collection_for_osp[]
-
-[NOTE]
-====
-For reporting of daily bottleneck data, incomplete days
-(days with less than 24 hourly data points from midnight to midnight)
-that are at the beginning or end of the requested interval are excluded.
-Days with less than 24 hourly data points would be inaccurate and
-including them would skew trend lines. Therefore, at least one full day
-of hourly data from midnight to midnight is necessary for displaying the
-bottleneck charts under the *Optimize* tab.
-====
-
-[[viewing-the-bottleneck-summary]]
-==== Viewing the Bottleneck Summary
-To find out more about bottleneck capacity or utilization, view a
-bottleneck summary.
-
-. Navigate to menu:Optimize[Bottlenecks].
-. Click *Summary* if it is not already selected.
-. Expand the tree on the left side, until you can see the desired
-  providers, clusters, or datastores.
-. Click on the item.
-. Use the *Options* section to change the characteristics of the data.
-  image:2257.png[]
-+
-* Use *Event Groups* to select if you want to see bottlenecks based
-  on capacity, utilization or both.
-* Select a *Time Zone*.
-+
-
-Data is processed, and a timeline appears. Click on an icon in
-the timeline to see specific information on the bottleneck.
-
-[[viewing-a-report-of-the-bottlenecks-trend]]
-==== Viewing a Report of the Bottlenecks Trend
-
-. Navigate to menu:Optimize[Bottlenecks].
-. Click *Report*.
-. Expand the tree on the left side, until you can see the desired
-  providers, clusters, or datastores.
-. Click on the item.
-. Use the *Options* section to change the characteristics of the data.
-  image:2258.png[]
-+
-* Use *Event Groups* to select if you want to see bottlenecks based
-  on capacity, utilization or both.
-* Select a *Time Zone*.
-+
-. Expand the tree on the left side, until you can see the enterprise,
-  provider, or datastore that you want to see the trend for.
-
-
-
-
-
-
-
-
 
 
