Implemented SME tech review feedback.

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -69,7 +69,7 @@ For information on how to configure centralized administration via database repl
 [[tenants]]
 === Tenancy
 
-{product-title} supports multi-tenancy, letting you isolate one tenant’s resources and user accounts from another. It allows for siloed organizations that have separate authentication and users, different branding, and different security. 
+{product-title} supports multitenancy, letting you isolate one tenant’s resources and user accounts from another. It allows for siloed organizations that have separate authentication and users, different branding, and different security. 
 
 Tenants can be totally separate or they can be in a parent-child or peer relationship. Tenants in a relationship can share or inherit a certain configuration. You can subdivide and create child tenants and they, in turn, can have child tenants, and so on. The ability to have multi-level (nested) tenants in a hierarchy enables those at the bottom to inherit permissions from those above. This configuration allows for granular user permissions to be set on specific tenants.  
 
@@ -92,11 +92,10 @@ Tenant administrator and tenant quota administrator roles are like administrator
 
 Tenancy Models::
 
-A number of approaches exist for tenant planning:
+The following two approaches exist for tenancy planning:
 
 * *Tenantless* - Similar to the previous system without tenancy support, you can create a single large tenant and perform all your operations in there without any subdivision of resources or user accounts.
 * *Enterprise model* - A common scenarios is to create a single tenant, and then subdivide it based on the structures or departments within your organization. Those departments are then able to further subdivide their resources into distinct projects. With this model, you have a single URL for user access, while still having the ability to divide resources into nested hierarchical tenants.
-* *Multiple tenant model (CCP)* - Created with Certified Cloud Providers in mind, this model allows multiple tenants to enjoy complete isolation from other tenants, with separate branding and unique URLs.
 
 Tenancy Configuration::
 
@@ -134,7 +133,7 @@ image:tenant-quotas-report.png[]
 * Total Quota: Total quota enforced per attribute for a tenant
 * In Use: Amount currently in use by tenants
 * Allocated: Amount of quota given to all child tenants
-* Available: Total Quota (-) In Use (-) Allocated
+* Available: _Total Quota_ minus (-) _In Use_ minus (-) _Allocated_
 
 [NOTE]
 ====
