--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -1,6 +1,13 @@
 [[automation_management_providers]]
 = Automation Management Providers
 
+{product-title} provides automation management features through the following:
+
+*Automate* enables real-time, bi-directional process integration. This provides you with a method to implement adaptive automation for management events and administrative or operational activities.
+
+*Ansible* integration delivers out-of-the-box support for backing service, alert and policy actions using Ansible playbooks. Sync your existing playbook repositories with CloudForms, add credentials to access providers, and create service catalog items for actions ranging from creating and retiring VMs, updating security software, or adding additional discs when space runs low. 
+
+*Ansible Tower* is a management tool integrated with {product-title_short}, designed to help automate infrastructure operations. {product-title_short} allows you to execute Ansible Tower jobs using service catalogs and Automate. Using Ansible Tower, you can schedule Ansible playbook runs and monitor current and historical results, allowing for troubleshooting or identification of issues before they occur.
 
 [[ansible-inside]]
 == Ansible
