brice edits the integration with openshift guide

--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -20,8 +20,13 @@ include::common/attributes/cfme.adoc[]
 
 include::topics/overview.adoc[]
 
+[[openshift-prerequisites]]
+= Prerequisites
+
+include::topics/prerequisites.adoc[]
+
 [[ose-metrics]]
-= Configuring OpenShift Enterprise Metrics
+= Enabling OpenShift Enterprise Metrics
 
 include::topics/ose-metrics.adoc[]
 
@@ -42,7 +47,7 @@ include::topics/ose-config-cfmiq.adoc[]
 include::common/smartstate.adoc[]
 
 [[integration]]
-= Adding the OpenShift Deployment as a Container Provider
+= Adding OpenShift Enterprise as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
 
