--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-config-cfmiq.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/ose-config-cfmiq.adoc
@@ -17,5 +17,5 @@ To enable these server roles:
 
 include::common/cap-util-assign-server-roles.adoc[]
 
-For more information, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#capacity_and_utilization_collection[Capacity and Utilization Collection] from the _Deployment Planning Guide_.
+For more information, see the https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/deployment-planning-guide/#capacity_and_utilization_collection[Capacity and Utilization Collection] section in the _Deployment Planning Guide_.
 
