--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/overview.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/overview.adoc
@@ -1,18 +1,5 @@
-This guide provides a quick walkthrough on adding a Red Hat OpenShift Enterprise deployment to a {product-title} container provider catalogue. Each procedure in this guide is covered in greater detail throughout other documents in the https://access.redhat.com/documentation/en/red-hat-cloudforms/[{product-title}] and https://access.redhat.com/documentation/en/openshift-enterprise/[OpenShift Enterprise] product documentation; whenever appropriate, we will provide links to the corresponding sections for more detail. This deployment focuses on ensuring that {product-title_short} can collect metrics from the OpenShift Enterprise deployment upon integration.
+This guide walks you through adding a Red Hat OpenShift Enterprise cluster to a {product-title} container provider catalog. This deployment focuses on enabling the OpenShift Enterprise cluster metrics plug-in, so that {product-title_short} can collect information from an OpenShift Enterprise cluster upon integration.
 
-This guide assumes that you have: 
+Each procedure in this guide is covered in greater detail in the https://access.redhat.com/documentation/en/red-hat-cloudforms/[{product-title}] and https://access.redhat.com/documentation/en/openshift-container-platform/[OpenShift Enterprise] product documentation. However, links to the corresponding sections are provided for more detail.
 
-* Already deployed {product-title}, and 
-* Already deployed OpenShift Enterprise.
-
-For detailed information on how to deploy either product, see:
-
-* https://access.redhat.com/documentation/en/openshift-enterprise/version-3.1/installation-and-configuration/[{product-title} Installation and Configuration]
-* https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/[OpenShift Enterprise Installation and Configuration]
-
-[NOTE]
-====================
-When enabling metrics on OpenShift Enterprise, you can store your metrics data on _persistent_ or _non-persistent_ storage. With persistent storage, you need to provision a persistent volume specifically for this purpose. See https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes] from https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/[OpenShift Enterprise Architecture] for more information. 
-====================
-
-The following sections will describe the required configuration for both products prior to integration (xref:integration[]).
+The following sections will describe the required configuration for both products prior to integration.
