--- a/doc-QuickStart_OpenShift_Provider_Guide/topics/provider-ose-add-container.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/topics/provider-ose-add-container.adoc
@@ -1,6 +1,6 @@
 // https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/managing-providers/#containers_providers
 
-At this point, you should now be ready to add the OpenShift Deployment to {product-title} as a container provider. To do so, prepare the token you retrieved earlier in xref:Obtaining_OpenShift_Enterprise_Management_Token[] and follow the procedure below:
+At this point, you should now be ready to add your OpenShift cluster to {product-title} as a container provider. To do so, prepare the token you retrieved in xref:Obtaining_OpenShift_Enterprise_Management_Token[] and follow the procedure below:
 
 // include::common/provider-ose-add-container.adoc[]
 
