update with new inst for BZ1439981 aND BZ1439973

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -42,15 +42,27 @@ include::Viewing_an_Object_Summary.adoc[]
 [[using-the-topology-widget]]
 == Using the Topology Widget
 
-The *Topology* widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers that {product-title} has access to.
+The *Topology* widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers and projects to which {product-title} has access.
 
 * The topology graph includes pods, containers, services, nodes, virtual machines, hosts, routes, and replicators within the overall containers provider environment.
 include::common/topology_widget.adoc[]
 
-.Using the Topology Widget
+=== Viewing the Topology for Container Providers
 . Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
 . On the provider summary page, click *Topology* in the *Overview* box on the right-hand side of the page.
+
+==== Viewing the Topology for Container Provider Projects
+. Navigate to menu:Compute[Containers > Providers].
+. Choose the desired containers provider for viewing the provider summary.
+. Click on *Projects* on the summary page. 
+. Select the desired project.
+. On the projects summary page, click the topology view button. 
+
+==== Limiting the Number of Containers Shown in the Topology View
+. Navigate to menu:Configuration[My Settings] and click on the *Visual* tab.
+. Select the number of container items from the drop-down under *Topology Default Items in View*.
+. Click *Save*.
 
 [[running-a-smartstate-analysis]]
 == Running a SmartState Analysis
