WIP: Added more info and procedures alongwith screen captures for CF4.5

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -1,12 +1,45 @@
 [[my-services-tab]]
 
-== The My Services Tab
+== Services Tab
 
-The *My Services* tab lists all available services with a summary of information associated with each service, including *Service Name*, *Retirement Date*, *Number of VMs*, *Owner*, the date it was *Created On*, and its *Power State*. You can filter or sort services by those entities, and now also by *Relative Cost*. There is now the ability for users to perform power operations on virtual machines within the Self Service user interface using the new set of buttons, *Start*, *Stop*, and *Suspend* for each service.  
+The *Services* tab lists all available services with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
 
-image:SSUI_MyServices_tab.png[]
+On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking more options _(represented by three dots)_ next to the service.
 
-Click a service to view further details including information on the virtual machines associated with it. There is now ability for users to view chargeback data per service for the virtual machines' month-to-date usage. You can also get HTML 5 console access to the virtual machine by clicking the image:SSUI_html5_icon.png[Html 5 Icon] button, as highlighted on the screen capture. On the same screen, you also have options to retire the service now or at a later date, edit or remove the service. Additionally, you can now change the ownership and group of the service using the *Set Ownership* button, and also *Reconfigure* a service, similar to in the full administrative user interface. 
+image:ssui-services-menu.png[]
+
+There is now the option to perform most of these operations in bulk (except editing service details and power operations). In order to do so, select the required services and then click the designated button for the desired operation on the upper-left corner of the screen. 
+
+Additionally, click on a service to view more details, including information on associated virtual machines and snapshots, and its relationships data.
+
+image:ssui-services-menu.png[]
+
+=== Accessing the HTML5 Console
+
+Follow this procedure to get HTML5 console access to the virtual machine. The console is the remote control system that enables you to work and interact directly with your virtual machines. 
+
+. From the *Services* tab, click on the required service.
+. In *Resources*, click *Access* and select *Open HTML5 Console*.
+
+The HTML5 console will open in a new window of your web browser. Note that you may have to enable the pop-up settings in your browser to access the console.
+
+=== Setting a Retirement Date for a Service
+
+Text
+
+=== Setting Ownership of a Service
+
+You can now change the ownership and group of the service using the Set Ownership button, and also Reconfigure a service, similar to in the full administrative user interface.
+
+=== Editing Tags
+
+Text
+
+=== Removing Services
+
+Text
+
+////
 
 image:SSUI_Service_Details1.png[]
 
@@ -14,11 +47,13 @@ Moreover, you can now add custom buttons and custom button groups that can have 
 
 image:SSUI_Custom_Button1.png[]
 
+////
+
 === Cockpit Integration
 
 Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
 
-{product-title} full administrative user interface and the Self Service user interface have enabled for users to click the new Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
+{product-title} full administrative user interface and the Self Service user interface have enabled for users to click the *Access* button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
 
 ==== Accessing the Cockpit Interface
 
@@ -27,11 +62,11 @@ Cockpit is an interactive Linux server administrative interface. You can perform
 Cockpit must be pre-configured and running on the virtual machine. 
 ====
 
-As you can see in the following screen capture of the Self Service user interface, the cockpit button is available next to the HTML 5 console button for a virtual machine instance in the *My Services* tab. 
+As you can see in the following screen capture, the link to open the Cockpit console for a virtual machine is available in the *Access* button, which also houses the link to the HTML5 Console, in the *Resources* section inside the *Services* tab. 
 
 . Click the *My Services* tab.
 . Click the required service from the list.
-. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. A notification at the top of the screen will appear to show the Cockpit interface is loading. 
+. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. A notification will appear to show the Cockpit interface is loading. 
 image:SSUI_Click-Cockpit-Button.png[Cockpit Button]
 . The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
 image:Cockpit_Login.png[Cockpit Login]
