--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -8,52 +8,88 @@ On the same screen, you have the option to edit the service name and description
 
 image:ssui-services-menu.png[]
 
-There is now the option to perform most of these operations in bulk (except editing service details and power operations). In order to do so, select the required services and then click the designated button for the desired operation on the upper-left corner of the screen. 
+There is now the option to perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select the services and then click the designated button for the required task on the upper-left corner of the screen. 
 
 Additionally, click on a service to view more details, including information on associated virtual machines and snapshots, and its relationships data.
 
-image:ssui-services-menu.png[]
-
+[[html5-console]]
 === Accessing the HTML5 Console
 
 Follow this procedure to get HTML5 console access to the virtual machine. The console is the remote control system that enables you to work and interact directly with your virtual machines. 
 
-. From the *Services* tab, click on the required service.
-. In *Resources*, click *Access* and select *Open HTML5 Console*.
+. From the *Services* screen, click on the required service.
+. In *Resources*, click the image:ssui-access-button.png[Access Button] button next to the virtual machine and select *Open HTML5 Console*.
+image:ssui-access-console.png[]
 
 The HTML5 console will open in a new window of your web browser. Note that you may have to enable the pop-up settings in your browser to access the console.
 
+[[schedule-retirement]]
 === Setting a Retirement Date for a Service
 
-Text
+Follow this procedure to schedule retirement for a service at a later date. For retiring a service immediately, see xref:retiring-service[].
+
+. From the *Services* screen, click on the required service you want to schedule retirement for.
+. Click the image:ssui-retirement-button.png[Service Retire Button] button located on the upper-right corner of the screen, then select *Set Retirement Dates*. The *Schedule Service Retirement* window will appear.
+image:ssui-schedule-service-retirement.png[]
+. Set the *Retirement Date*.
+. Select the *Retirement Warning* from the list.
+. Click *Save*.
+
+[[retiring-service]]
+=== Retiring a Service
+
+Follow this procedure to retire a service immediately. For retiring a service at a later date, see xref:schedule-retirement[].
+
+. From the *Services* screen, click on the service you want to retire now.
+. Click the image:ssui-retirement-button.png[Service Retire Button] button located on the upper-right corner of the screen, then select *Retire*. The *Retire Service Now* window will appear to confirm your action.
+image:ssui-retire-service-now.png[]
+. Click *Yes, Retire Service Now*.
 
 === Setting Ownership of a Service
 
-You can now change the ownership and group of the service using the Set Ownership button, and also Reconfigure a service, similar to in the full administrative user interface.
+Follow this procedure to set ownership of a service. 
 
-=== Editing Tags
+. From the *Services* screen, click on more options next to the service you want set ownership for, then click *Set Ownership*.
+. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Set Ownership*.
+image:ssui-set-service-ownership.png[]
+. Select an owner from the list.
+. Select a group from the list.
+. Click *Save*.
 
-Text
+=== Adding / Editing Tags
 
-=== Removing Services
+Follow this procedure to add or edit tags for a service. 
 
-Text
+. From the *Services* screen, click on more options next to the service you want add or edit tags for, then click *Edit Tags*.
+. Alternatively, click on the service. Click the image:ssui-edit-tags-button.png[] button located on the upper-right corner of the screen, then select *Edit Tags*.
+image:ssui-add-edit-tags.png[]
+. To add a tag, select the tag category and value from the lists, then click the blue plus (+) sign as shown in the screen capture.
+. To edit tags, simply change the value assigned to a category, or click on the cross sign in the tag to delete an existing tag.
+. Click *Save*.
 
-////
+=== Removing a Service
 
-image:SSUI_Service_Details1.png[]
+Follow this procedure to remove a service. 
 
-Moreover, you can now add custom buttons and custom button groups that can have dialogs associated with them. For example:
+. From the *Services* screen, click on more options next to the service you want to remove, then click *Remove*.
+. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Remove*. A confirmation window appears.
+. Click *Yes, Remove Service*.
 
-image:SSUI_Custom_Button1.png[]
+=== Editing a Service
 
-////
+Follow this procedure to edit the name and description of a service.
+
+. From the *Services* screen, click on more options next to the service you want to remove, then click *Edit*.
+. Alternatively, click on the service. Click the image:ssui-service-settings-button.png[] button located on the upper-right corner of the screen, then select *Edit*. An *Edit Service* screen appears.
+. Edit the name and description of the service as required.
+image:ssui-edit-service.png[]
+. Click *Save*.
 
 === Cockpit Integration
 
 Cockpit is an interactive Linux server administrative interface. You can perform simple administration tasks such as starting containers, storage administration, network configuration, and inspecting logs. While cockpit allows you to monitor and administer several servers at the same time, your browser connects to a primary server that runs the Cockpit web service through which connections to additional servers can be established.
 
-{product-title} full administrative user interface and the Self Service user interface have enabled for users to click the *Access* button image:SSUI_Cockpit-Button.png[Cockpit Button] that opens a new browser window with Cockpit interface for a given virtual machine. 
+{product-title} full administrative user interface and the Self Service user interface have enabled for users to access the Cockpit interface for a given virtual machine. 
 
 ==== Accessing the Cockpit Interface
 
@@ -62,12 +98,10 @@ Cockpit is an interactive Linux server administrative interface. You can perform
 Cockpit must be pre-configured and running on the virtual machine. 
 ====
 
-As you can see in the following screen capture, the link to open the Cockpit console for a virtual machine is available in the *Access* button, which also houses the link to the HTML5 Console, in the *Resources* section inside the *Services* tab. 
+The option to open the Cockpit console for a virtual machine is available in the image:ssui-access-button.png[Access Button] button, which also houses the option to open HTML5 Console, in the *Resources* section inside the *Services* tab. 
 
-. Click the *My Services* tab.
-. Click the required service from the list.
-. Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. A notification will appear to show the Cockpit interface is loading. 
-image:SSUI_Click-Cockpit-Button.png[Cockpit Button]
+. From the *Services* screen, click on the service associated with the virtual machine you want to open the Cockpit console for.
+. In *Resources*, click *Access* next to the virtual machine and select *Open Cockpit Console*. A notification will appear to show the Cockpit interface is loading. 
 . The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
 image:Cockpit_Login.png[Cockpit Login]
 . Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
