Changed beta references to GA references for all downstream meta data.

--- a/doc-Installing_on_VMware_vSphere/miq/index.adoc
+++ b/doc-Installing_on_VMware_vSphere/miq/index.adoc
@@ -1,6 +1,6 @@
 = Installing ManageIQ on VMware vSphere
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :toc: left
 :toclevels: 3
 :experimental:
@@ -33,6 +33,7 @@ include::common/initial-login.adoc[]
 === Changing the Default Login Password
 
 include::common/initial-login-changepw.adoc[]
+
 
 
 
