--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -1,5 +1,5 @@
 = Integration with Red Hat OpenShift Enterprise
-:vernum: 4.5-beta
+:vernum: 4.5
 :doctype: article
 :imagesdir: images
 :toc: left
@@ -45,5 +45,6 @@ include::common/smartstate.adoc[]
 = Adding the OpenShift Deployment as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
+
 
 
