--- a/doc-Appliance_Hardening_Guide/cfme/master.adoc
+++ b/doc-Appliance_Hardening_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Appliance Hardening Guide
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -22,6 +22,7 @@ include::topics/Appliance_Security.adoc[]
 include::topics/Server_Security.adoc[]
 
 include::topics/Database_Security.adoc[]
+
 
 
 
