--- a/doc-Installing_on_AWS/miq/index.adoc
+++ b/doc-Installing_on_AWS/miq/index.adoc
@@ -1,6 +1,6 @@
 = Installing ManageIQ on VMware vSphere
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :toc: left
 :toclevels: 3
 :experimental:
@@ -35,6 +35,7 @@ include::common/initial-login.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
 
 
 
