--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on VMware vSphere
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :toc: left
 :toclevels: 3
 :experimental:
@@ -41,5 +41,6 @@ include::common/initial-login-changepw.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
 
 
