--- a/doc-Methods_Available_for_Automation/cfme/master.adoc
+++ b/doc-Methods_Available_for_Automation/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Methods Available for Automation
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -17,6 +17,7 @@ include::common/attributes/cfme.adoc[]
 include::topics/Methods_Available_for_Automation.adoc[]
 
 include::topics/Terminology.adoc[]
+
 
 
 
