--- a/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Monitoring, Alerts, and Reporting
 :imagesdir: images
-:vernum: 4.5-beta
+:vernum: 4.5
 :toc: left
 :toclevels: 3
 :experimental:
@@ -35,6 +35,7 @@ include::topics/RSS.adoc[]
 include::topics/appe-Regular_Expressions.adoc[]
 
 include::topics/appe-Reportable_Fields.adoc[]
+
 
 
 
