Fixed includes for several of the installation guides.

--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -17,7 +17,7 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 
 [[Installation]]
-include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/topics/installation.adoc[]
+include::topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
