--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -17,7 +17,7 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 
 [[Installation]]
-include::doc-Installing_on_Google_Compute_Engine/miq/topics/installation.adoc[]
+include::topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
